cluster/gitops/data/temporal/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal
spec:
  hostnames:
    - temporal.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: temporal-web
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
